--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tv_history"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Result"
+        android:text="@string/result"
         android:textStyle="bold"
         android:textSize="32sp"
         app:layout_constraintBottom_toBottomOf="parent"
